src/solidModels/log.error
Making dependency list for source file fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C
SOURCE=fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C ;  g++ -m64 -Dlinux64 -DWM_DP -Wall -Wextra -Wno-unused-parameter -Wold-style-cast -Wnon-virtual-dtor -O3  -DNoRepository -ftemplate-depth-200 -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude      -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/meshTools/lnInclude     -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteArea/lnInclude     -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/lagrangian/lnInclude     -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/dynamicMesh/lnInclude     -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/dynamicMesh/dynamicMesh/lnInclude     -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/dynamicMesh/dynamicFvMesh/lnInclude 	-I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude     -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/dynamicMesh/topoChangerFvMesh/lnInclude -IlnInclude -I. -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude -I/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/OSspecific/POSIX/lnInclude   -fPIC -c $SOURCE -o Make/linux64GccDPOpt/solidGeneralContactFvPatchVectorField.o
In file included from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/DimensionedField.H:344:0,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude/fvPatchField.H:48,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude/fvPatchFields.H:29,
                 from fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.H:53,
                 from fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C:29:
/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/DimensionedField.C: In constructor ‘Foam::DimensionedField<Type, GeoMesh>::DimensionedField(const Foam::word&, const Foam::DimensionedField<Type, GeoMesh>&)’:
/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/DimensionedField.C:195:42: warning: invalid use of incomplete type ‘const class Foam::Time’
     regIOobject(IOobject(newName, df.time().timeName(), df.db())),
                                   ~~~~~~~^~
In file included from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/regIOobject.H:41:0,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/DimensionedField.H:41,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude/fvPatchField.H:48,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude/fvPatchFields.H:29,
                 from fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.H:53,
                 from fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C:29:
/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/IOobject.H:78:7: note: forward declaration of ‘class Foam::Time’
 class Time;
       ^~~~
In file included from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/DimensionedField.H:344:0,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude/fvPatchField.H:48,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude/fvPatchFields.H:29,
                 from fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.H:53,
                 from fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C:29:
/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/DimensionedField.C: In constructor ‘Foam::DimensionedField<Type, GeoMesh>::DimensionedField(const Foam::word&, Foam::DimensionedField<Type, GeoMesh>&, bool)’:
/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/DimensionedField.C:210:42: warning: invalid use of incomplete type ‘const class Foam::Time’
     regIOobject(IOobject(newName, df.time().timeName(), df.db())),
                                   ~~~~~~~^~
In file included from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/regIOobject.H:41:0,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/DimensionedField.H:41,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude/fvPatchField.H:48,
                 from /mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/finiteVolume/lnInclude/fvPatchFields.H:29,
                 from fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.H:53,
                 from fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C:29:
/mnt/c/Users/lila23/Documents/EXTEND/foam-extend-4.0/src/foam/lnInclude/IOobject.H:78:7: note: forward declaration of ‘class Foam::Time’
 class Time;
       ^~~~
fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C: In member function ‘void Foam::solidGeneralContactFvPatchVectorField::calcQcs() const’:
fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C:1407:51: error: ‘const class Foam::frictionContactModel’ has no member named ‘slip’
             curPatchSlip = frictionModel(shadowI).slip();
                                                   ^~~~
fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C:1421:57: error: ‘const class Foam::frictionContactModel’ has no member named ‘slip’
             shadowPatchField.frictionModel(locShadowID).slip();
                                                         ^~~~
fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.C:1435:54: error: ‘const primitivePatchInterpolation {aka const class Foam::PrimitivePatchInterpolation<Foam::PrimitivePatch<Foam::face, Foam::SubList, const Foam::Field<Foam::Vector<double> >&> >}’ has no member named ‘slaveToMaster’
             shadowPatchField.zoneToZone(locShadowID).slaveToMaster
                                                      ^~~~~~~~~~~~~
make: *** [fvPatchFields/solidContact/solidGeneralContactFvPatchVectorField.dep:597: Make/linux64GccDPOpt/solidGeneralContactFvPatchVectorField.o] Error 1
